; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/lwip/extr_network.c_do_accept.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/lwip/extr_network.c_do_accept.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.apimsg_msg = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i32, %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i64 }

@API_MSG_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [45 x i8] c"api_msg: accept RAW: cannot accept for RAW.\0A\00", align 1
@.str.1 = private unnamed_addr constant [45 x i8] c"api_msg: accept UDP: cannot accept for UDP.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.apimsg_msg*)* @do_accept to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @do_accept(%struct.apimsg_msg* %0) #0 {
  %2 = alloca %struct.apimsg_msg*, align 8
  store %struct.apimsg_msg* %0, %struct.apimsg_msg** %2, align 8
  %3 = load %struct.apimsg_msg*, %struct.apimsg_msg** %2, align 8
  %4 = getelementptr inbounds %struct.apimsg_msg, %struct.apimsg_msg* %3, i32 0, i32 0
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 1
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %24

10:                                               ; preds = %1
  %11 = load %struct.apimsg_msg*, %struct.apimsg_msg** %2, align 8
  %12 = getelementptr inbounds %struct.apimsg_msg, %struct.apimsg_msg* %11, i32 0, i32 0
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  switch i32 %15, label %23 [
    i32 132, label %16
    i32 129, label %19
    i32 128, label %19
    i32 130, label %19
    i32 131, label %22
  ]

16:                                               ; preds = %10
  %17 = load i32, i32* @API_MSG_DEBUG, align 4
  %18 = call i32 @LWIP_DEBUGF(i32 %17, i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str, i64 0, i64 0))
  br label %23

19:                                               ; preds = %10, %10, %10
  %20 = load i32, i32* @API_MSG_DEBUG, align 4
  %21 = call i32 @LWIP_DEBUGF(i32 %20, i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str.1, i64 0, i64 0))
  br label %23

22:                                               ; preds = %10
  br label %23

23:                                               ; preds = %10, %22, %19, %16
  br label %24

24:                                               ; preds = %23, %1
  ret void
}

declare dso_local i32 @LWIP_DEBUGF(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
